@@ -70,6 +70,8 @@ FIXES
 
  * DataViews from Filter with runtime parameters show error
 
+ * Default filters with runtime parameters doesn't properly work in management side
+
 
 
 
